Remove java 16 feat